Fixed horizontal scroll issue

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -154,3 +154,7 @@ Table thead Th {
     bottom: 0;
   }
 }
+
+.contain {
+  contain: paint;
+}
